# gcn-assembly-study

./: CMakeLists.txt  asm.cmake
test/: A_S_S_256_4_gfx942.s  A_S_S_256_4_gfx942.yaml  CMakeLists.txt  a.out  codegen.py  gen_asm.sh  main.cpp
