cmake_minimum_required(VERSION 3.16)
project(test)
set(CMAKE_C_COMPILER hipcc)
set(CMAKE_CXX_COMPILER hipcc)
list(APPEND CMAKE_PREFIX_PATH "/tmp/test" "/opt/rocm/lib/cmake")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g")
add_executable(${PROJECT_NAME} main.cpp)
find_package(hip REQUIRED)
target_link_libraries(${PROJECT_NAME} hip::device)
include(../asm.cmake)
add_custom_target(asm_amax_target)
add_dependencies(${PROJECT_NAME} asm_amax_target)
build_asm(A_S_S_256_4_gfx942 asm_amax_target)